docs(module-4): Translate notebooks to Korean and enhance setup
feat(module-4/2-sub-graph.ipynb): Add environment variable loading
- Introduce a new cell to load .env file for API keys and settings.
- This enables easier local setup and management of sensitive info.

docs(module-4/1-parallelization.ipynb): Translate comments to Korean
- Translate a comment in the `State` class definition.

docs(module-4/2-sub-graph.ipynb): Translate markdown and code comments
- Translate markdown headings and descriptive text to Korean.
- Translate comments and string literals within Python functions.

style(module-4/2-sub-graph.ipynb): Apply minor code formatting
- Split imports and add blank lines for better visual separation.
- Reformat dictionary returns and `StateGraph` instantiations.

chore(module-4/2-sub-graph.ipynb): Update notebook metadata
- Adjust `execution_count` values to reflect a fresh run.
- Update `kernelspec` and `language_info` versions.

--- a/module-4/1-parallelization.ipynb
+++ b/module-4/1-parallelization.ipynb
@@ -504,7 +504,7 @@
     "\n",
     "\n",
     "class State(TypedDict):\n",
-    "    # sorting_reducer will sort the values in state\n",
+    "    # sorting_reducer는 상태의 값들을 정렬합니다\n",
     "    state: Annotated[list, sorting_reducer]\n",
     "\n",
     "\n",
