docs(module-6): translate notebooks to Korean and refine formatting
- Translates markdown content in `1-creating.ipynb`, `2-connecting.ipynb`,
 and `4-assistant.ipynb` to Korean.
- Translates code comments in `2-connecting.ipynb` and `4-assistant.ipynb` to Korean.
- Updates code block syntax to explicitly specify `shell` language.
- Adds `<!-- end list -->` to markdown lists for proper rendering.
- Replaces an embedded image with a direct URL in `2-connecting.ipynb`.
- These changes provide localized content for Korean-speaking users and improve
 document consistency.

--- a/module-6/1-creating.ipynb
+++ b/module-6/1-creating.ipynb
@@ -4,24 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating a deployment\n",
+    "# 배포 생성하기\n",
     "\n",
-    "Let's create a deployment of the `task_maistro` app that we created in module 5.\n",
+    "모듈 5에서 만들었던 `task_maistro` 앱의 배포를 생성해 보겠습니다.\n",
     "\n",
-    "## Code structure\n",
+    "## 코드 구조\n",
     "\n",
-    "[The following information should be provided](https://langchain-ai.github.io/langgraph/concepts/application_structure/) to create a LangGraph Platform deployment:\n",
+    "LangGraph Platform 배포를 생성하려면 [다음과 같은 정보가 제공되어야 합니다](https://langchain-ai.github.io/langgraph/concepts/application_structure/).\n",
     "\n",
-    "* A [LangGraph API Configuration file](https://langchain-ai.github.io/langgraph/concepts/application_structure/#configuration-file) - `langgraph.json`\n",
-    "* The graphs that implement the logic of the application - e.g., `task_maistro.py`\n",
-    "* A file that specifies dependencies required to run the application - `requirements.txt`\n",
-    "* Supply environment variables needed for the application to run - `.env` or `docker-compose.yml`\n",
+    "* [LangGraph API 설정 파일](https://langchain-ai.github.io/langgraph/concepts/application_structure/#configuration-file) - `langgraph.json`\n",
+    "* 애플리케이션의 로직을 구현하는 그래프 - 예: `task_maistro.py`\n",
+    "* 애플리케이션 실행에 필요한 의존성을 명시하는 파일 - `requirements.txt`\n",
+    "* 애플리케이션 실행에 필요한 환경 변수 제공 - `.env` 또는 `docker-compose.yml`\n",
     "\n",
-    "We have this already in the `module-6/deployment` directory! \n",
+    "이 파일들은 이미 `module-6/deployment` 디렉토리에 준비되어 있습니다!\n",
     "\n",
     "## CLI\n",
     "\n",
-    "The [LangGraph CLI](https://langchain-ai.github.io/langgraph/concepts/langgraph_cli/) is a command-line interface for creating a LangGraph Platform deployment."
+    "[LangGraph CLI](https://langchain-ai.github.io/langgraph/concepts/langgraph_cli/)는 LangGraph Platform 배포 생성을 위한 커맨드 라인 인터페이스(CLI)입니다."
    ]
   },
   {
@@ -38,52 +38,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To create a [self-hosted deployment](https://langchain-ai.github.io/langgraph/how-tos/deploy-self-hosted/#how-to-do-a-self-hosted-deployment-of-langgraph), we'll follow a few steps. \n",
+    "[자체 호스팅 배포(self-hosted deployment)](https://langchain-ai.github.io/langgraph/how-tos/deploy-self-hosted/#how-to-do-a-self-hosted-deployment-of-langgraph)를 생성하기 위해 몇 가지 단계를 따르겠습니다.\n",
     "\n",
-    "### Build Docker Image for LangGraph Server\n",
+    "### LangGraph 서버를 위한 Docker 이미지 빌드\n",
     "\n",
-    "We first use the langgraph CLI to create a Docker image for the [LangGraph Server](https://docs.google.com/presentation/d/18MwIaNR2m4Oba6roK_2VQcBE_8Jq_SI7VHTXJdl7raU/edit#slide=id.g313fb160676_0_32).\n",
+    "먼저 `langgraph` CLI를 사용하여 [LangGraph 서버](https://docs.google.com/presentation/d/18MwIaNR2m4Oba6roK_2VQcBE_8Jq_SI7VHTXJdl7raU/edit#slide=id.g313fb160676_0_32)를 위한 Docker 이미지를 생성합니다.\n",
     "\n",
-    "This will package our graph and dependencies into a Docker image.\n",
+    "이 과정은 우리가 만든 그래프와 의존성 파일들을 Docker 이미지로 패키징합니다.\n",
     "\n",
-    "A Docker image is a template for a Docker container that contains the code and dependencies required to run the application.\n",
+    "Docker 이미지는 애플리케이션 실행에 필요한 코드와 의존성을 포함하는 Docker 컨테이너용 템플릿입니다.\n",
     "\n",
-    "Ensure that [Docker](https://docs.docker.com/engine/install/) is installed and then run the following command to create the Docker image, `my-image`:\n",
+    "[Docker](https://docs.docker.com/engine/install/)가 설치되어 있는지 확인한 후, 다음 명령어를 실행하여 `my-image`라는 Docker 이미지를 생성하세요:\n",
     "\n",
-    "```\n",
+    "```shell\n",
     "$ cd module-6/deployment\n",
     "$ langgraph build -t my-image\n",
     "```\n",
     "\n",
-    "### Set Up Redis and PostgreSQL\n",
+    "### Redis와 PostgreSQL 설정\n",
     "\n",
-    "If you already have Redis and PostgreSQL running (e.g., locally or on other servers), then create and run the LangGraph Server container [by itself](https://langchain-ai.github.io/langgraph/how-tos/deploy-self-hosted/#running-the-application-locally) with the URIs for Redis and PostgreSQL:\n",
+    "만약 이미 Redis와 PostgreSQL을 실행 중이라면(예: 로컬 또는 다른 서버), Redis와 PostgreSQL의 URI를 직접 지정하여 LangGraph 서버 컨테이너를 [단독으로](https://langchain-ai.github.io/langgraph/how-tos/deploy-self-hosted/#running-the-application-locally) 생성하고 실행할 수 있습니다:\n",
     "\n",
-    "```\n",
+    "```shell\n",
     "docker run \\\n",
     "    --env-file .env \\\n",
     "    -p 8123:8000 \\\n",
-    "    -e REDIS_URI=\"foo\" \\\n",
-    "    -e DATABASE_URI=\"bar\" \\\n",
-    "    -e LANGSMITH_API_KEY=\"baz\" \\\n",
+    "    -e REDIS_URI=\"여기에_Redis_URI_입력\" \\\n",
+    "    -e DATABASE_URI=\"여기에_PostgreSQL_URI_입력\" \\\n",
+    "    -e LANGSMITH_API_KEY=\"여기에_LangSmith_API_키_입력\" \\\n",
     "    my-image\n",
     "```\n",
     "\n",
-    "Alternatively, you can use the provided `docker-compose.yml` file to create three separate containers based on the services defined: \n",
+    "또는, 제공된 `docker-compose.yml` 파일을 사용하여 정의된 서비스에 따라 세 개의 개별 컨테이너를 생성할 수도 있습니다:\n",
     "\n",
-    "* `langgraph-redis`: Creates a new container using the official Redis image.\n",
-    "* `langgraph-postgres`: Creates a new container using the official Postgres image.\n",
-    "* `langgraph-api`: Creates a new container using your pre-built image.\n",
+    "  * `langgraph-redis`: 공식 Redis 이미지를 사용하여 새 컨테이너를 생성합니다.\n",
+    "  * `langgraph-postgres`: 공식 Postgres 이미지를 사용하여 새 컨테이너를 생성합니다.\n",
+    "  * `langgraph-api`: 미리 빌드한 여러분의 이미지를 사용하여 새 컨테이너를 생성합니다.\n",
     "\n",
-    "Simply copy the `docker-compose-example.yml` and add the following environment variables to run the deployed `task_maistro` app:\n",
+    "간단히 `docker-compose-example.yml` 파일을 복사한 후, 배포된 `task_maistro` 앱을 실행하기 위해 다음 환경 변수들을 추가하세요:\n",
     "\n",
-    "* `IMAGE_NAME` (e.g., `my-image`) \n",
-    "* `LANGSMITH_API_KEY`\n",
-    "* `OPENAI_API_KEY`\n",
+    "  * `IMAGE_NAME` (예: `my-image`)\n",
+    "  * `LANGSMITH_API_KEY`\n",
+    "  * `OPENAI_API_KEY`\n",
     "\n",
-    "Then, [launch the deployment](https://langchain-ai.github.io/langgraph/how-tos/deploy-self-hosted/#using-docker-compose):\n",
+    "그런 다음, [배포를 시작](https://langchain-ai.github.io/langgraph/how-tos/deploy-self-hosted/#using-docker-compose)하세요:\n",
     "\n",
-    "```\n",
+    "```shell\n",
     "$ cd module-6/deployment\n",
     "$ docker compose up\n",
     "```"
