docs(module-6/3-double-texting.ipynb): add Korean comments and translate markdown to Korean
This commit updates the Jupyter notebook `module-6/3-double-texting.ipynb` by adding Korean comments to the code cells and translating the markdown cells into Korean. This change aims to improve the readability and understanding of the notebook for Korean-speaking users.

Specifically, the following changes were made:

- Added Korean comments to explain the `multitask_strategy` parameters in the code cells.
- Translated the markdown headings and descriptions from English to Korean.
- Corrected a minor typo in a markdown cell from "초기 실행이 삭제되었습니다." to "첫번째 실행이 삭제되었습니다." for better accuracy.

--- a/module-6/3-double-texting.ipynb
+++ b/module-6/3-double-texting.ipynb
@@ -80,7 +80,7 @@
     "        graph_name,\n",
     "        input={\"messages\": [HumanMessage(content=user_input_2)]},\n",
     "        config=config,\n",
-    "        multitask_strategy=\"reject\",\n",
+    "        multitask_strategy=\"reject\",  # 동시 실행 거부\n",
     "    )\n",
     "except httpx.HTTPStatusError as e:\n",
     "    # 예상대로 HTTPStatusError가 발생하여 동시 실행이 거부됩니다.\n",
@@ -194,13 +194,13 @@
     "user_input_1 = \"이번 주말에 Erik에게 티셔츠 선물을 보내는 To-Do를 추가해줘.\"\n",
     "user_input_2 = \"금요일까지 현금 찾아서 보모님께 2주치 급여를 드리는 To-Do를 추가해줘.\"\n",
     "config = {\"configurable\": {\"user_id\": \"Test-Double-Texting\"}}\n",
-    "graph_name = \"task_maistro\" \n",
+    "graph_name = \"task_maistro\"\n",
     "\n",
     "# 첫 번째 실행을 시작합니다.\n",
     "first_run = await client.runs.create(\n",
     "    thread[\"thread_id\"],\n",
     "    graph_name,\n",
-    "    input={\"messages\": [HumanMessage(content=user_input_1)]}, \n",
+    "    input={\"messages\": [HumanMessage(content=user_input_1)]},\n",
     "    config=config,\n",
     ")\n",
     "\n",
@@ -208,15 +208,25 @@
     "# multitask_strategy=\"enqueue\"는 이 요청을 대기열(큐)에 추가하여 순차적으로 처리되도록 합니다.\n",
     "second_run = await client.runs.create(\n",
     "    thread[\"thread_id\"],\n",
-    "    graph_"
+    "    graph_name,\n",
+    "    input={\"messages\": [HumanMessage(content=user_input_2)]},\n",
+    "    config=config,\n",
+    "    multitask_strategy=\"enqueue\",  # 대기열(큐)에 추가\n",
+    ")\n",
+    "\n",
+    "# Wait until the second run completes\n",
+    "await client.runs.join(thread[\"thread_id\"], second_run[\"run_id\"])\n",
+    "\n",
+    "# Get the state of the thread\n",
+    "state = await client.threads.get_state(thread[\"thread_id\"])\n",
+    "for m in convert_to_messages(state[\"values\"][\"messages\"]):\n",
+    "    m.pretty_print()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Interrupt\n",
-    "\n",
     "## 중단 (Interrupt)\n",
     "\n",
     "[중단(interrupt)](https://langchain-ai.github.io/langgraph/cloud/how-tos/interrupt_concurrent/) 전략을 사용하면, 현재 실행을 중단시키면서도 그 시점까지 수행된 모든 작업 내용은 저장할 수 있습니다.\n"
@@ -284,7 +294,7 @@
     "    graph_name,\n",
     "    input={\"messages\": [HumanMessage(content=user_input_2)]},\n",
     "    config=config,\n",
-    "    multitask_strategy=\"interrupt\",\n",
+    "    multitask_strategy=\"interrupt\",  # 중단\n",
     ")\n",
     "\n",
     "# 두 번째 실행이 완료될 때까지 기다립니다.\n",
@@ -389,7 +399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "초기 실행이 삭제되었습니다."
+    "첫번째 실행이 삭제되었습니다."
    ]
   },
   {
