--- a/module-6/4-assistant.ipynb
+++ b/module-6/4-assistant.ipynb
@@ -24,7 +24,9 @@
     "\n",
     "예를 들어, 개인적인 작업을 위한 어시스턴트 하나와 업무용 작업을 위한 또 다른 어시스턴트를 원할 수 있습니다.\n",
     "\n",
-    "이것들은 `todo_category`와 `task_maistro_role` 설정 가능 필드를 사용하여 쉽게 구성할 수 있습니다."
+    "이것들은 `todo_category`와 `task_maistro_role` 설정 가능 필드를 사용하여 쉽게 구성할 수 있습니다.\n",
+    "\n",
+    "![Screenshot 2024-11-18 at 9.35.55 AM.png](https://cdn.prod.website-files.com/65b8cd72835ceeacd4449a53/673d50597f4e9eae9abf4869_Screenshot%202024-11-19%20at%206.57.01%E2%80%AFPM.png)"
    ]
   },
   {
