feat(sql-agent): add langsmith evaluation for sql agent
Integrate LangSmith evaluation into the SQL agent notebook to systematically assess its performance.

This change introduces the `evaluate` function from the `langsmith` library to run experiments against a predefined dataset. It utilizes a custom answer evaluator to measure the correctness of the agent's responses, running the evaluation multiple times for consistency.

--- a/projects/09-SQL-Agent.ipynb
+++ b/projects/09-SQL-Agent.ipynb
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 68,
    "id": "34a010b5",
    "metadata": {},
    "outputs": [
@@ -1002,18 +1002,19 @@
        "{'response': 'The customers from the USA spent the most, with a total spending amount of 523.06.'}"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predict_sql_agent_answer({\"input\": examples[0][0]})"
+    "response = predict_sql_agent_answer({\"input\": examples[0][0]})\n",
+    "response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "266763ac",
    "metadata": {},
    "outputs": [],
@@ -1053,6 +1054,51 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "67d5ade7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/anpigon/Workspace/Wantedlab/langchain-academy/venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "View the evaluation results for experiment: 'sql-agent-eval-3f5a20b5' at:\n",
+      "https://smith.langchain.com/o/92657a09-ac43-48a7-9363-ed8025ba42d7/datasets/79ad9b12-0f1f-41ab-a5ca-01fdd2fb1984/compare?selectedSessions=b79faf82-1090-4698-a10b-5c956ba47522\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "15it [01:31,  6.11s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langsmith.evaluation import evaluate\n",
+    "\n",
+    "# 평가 진행\n",
+    "evaluate(\n",
+    "    predict_sql_agent_answer,  # 평가시 활용할 예측 함수\n",
+    "    data=dataset_name,  # 평가용 데이터셋 이름\n",
+    "    evaluators=[answer_evaluator],  # 평가자 목록\n",
+    "    num_repetitions=3,  # 실험 반복 횟수 설정\n",
+    "    experiment_prefix=\"sql-agent-eval\",\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97670116",
    "metadata": {},
    "outputs": [],
    "source": []
